# installer

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  إنشاء بنك افتراضي وتكوين عملة ShDin
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  concepts.md  conf.py  index.md  index.rst  license.md  requirements.txt
docs/_static/: custom.css
docs/api/: __init__.md  core.md  destinations.md  index.rst  records.md  records.rst  scripts.md  scripts.rst  sources.md  utils.md
docs/cli/: installer.md
docs/development/: design.md  governance.md  index.md  workflow.md
examples/: whl.py
src/installer/: __init__.py  __main__.py  _compile_worker.py  _core.py  destinations.py  exceptions.py  iohandler.py  layouts.py  protocols.py  records.py  scripts.py  sources.py  utils.py  validation.py  wheels.py
src/installer/_compat/: __init__.py  builtins.py  importlib_resources.py  pathlib.py  typing.py
tests/: conftest.py  requirements.txt  test_basic.py  test_core.py  test_destinations.py  test_iohandler.py  test_layouts.py  test_main.py  test_records.py  test_scripts.py  test_sources.py  test_utils.py  test_wheels.py
tools/: isort.cfg  update_launchers.py
