[build-system]
build-backend = "flit_core.buildapi"
requires = [
    "flit_core<4,>=3.2",
]

[project]
name = "installer"
readme = "README.md"
authors = [
    { name = "Pradyun Gedam", email = "pradyunsg@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "description",
    "version",
]
[project.urls]
"GitHub" = "https://github.com/pypa/installer"

[tool.ruff]
fix = true
extend-exclude = [
    "noxfile.py",
    "docs/*"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "ISC",
    "D",
]
ignore = [
    "D105",
    "D203",
    "D213",
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"tools/*" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
]

[tool.mypy]
files = "src,tools"
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
